[package]
name = "dcutils"
version = "0.1.0"
edition = "2021"
authors = ["marylieh <support@marylieh.social>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
